--- a/code/_stylesheets/boxes.css
+++ b/code/_stylesheets/boxes.css
@@ -1,3 +1,23 @@
+@media (max-width: 576px) {
+    body{
+        background-color: red;
+    }
+}
+
+@media (min-width: 576px) {
+    body{
+        background-color: yellow ;
+    }
+    
+}
+
+@media (min-width: 992px) {
+    body{
+        background-color: green ;
+    }
+}
+
+
 .me-3{
     margin-right: 80px;
 }
