--- a/code/_stylesheets/global.css
+++ b/code/_stylesheets/global.css
@@ -8,7 +8,7 @@
     --primary-100: #FFFFFF;
     --primary-99: #FFFBFE;
     --primary-95: #F6EDFF;
-    --primary-90: E9DDFF;
+    --primary-90: #E9DDFF;
     --primary-80: #CFBCFF;
     --primary-70: #B49CFD;
     --primary-60: #9982E0;
