--- a/code/_stylesheets/boxes.css
+++ b/code/_stylesheets/boxes.css
@@ -19,9 +19,12 @@
     } 
 }
 
+.m-0{
+    margin: 0px;
+}
 
-.me-3{
-    margin-right: 80px;
+.me-1{
+    margin-right: 10px;
 }
 
 .m-2{
@@ -33,6 +36,27 @@
     margin-bottom: 25px;
 }
 
+.mt-2{
+    margin-top: 25px;
+}
+
 .me-2{
     margin-right: 25px;
+}
+
+.mb-3{
+    margin-bottom: 30px;
+}
+
+.me-4{
+    margin-right: 60px;
+}
+
+.my-4{
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.mt-4{
+    margin-top: 60px;
 }
