--- a/code/_stylesheets/text.css
+++ b/code/_stylesheets/text.css
@@ -1,3 +1,22 @@
 .text-center{
     text-align: center;
 }
+
+.h1-default{
+    font: normal var(--font-primary);
+    font-size: 48px;
+    letter-spacing: -0.24px;
+    line-height: 69px;
+}
+
+.p-display{
+    font-family: var(--font-primary);
+    font-size: 24px;
+    font-weight: 300;
+    letter-spacing: 0.12px;
+}
+
+.p-default{
+    font-family: var(--font-primary);
+    font-size: 16px;
+}
