--- a/code/_stylesheets/style.css
+++ b/code/_stylesheets/style.css
@@ -35,6 +35,13 @@ body{
     text-decoration: none;
 }
 
+.link-nav:hover{
+    text-shadow: 0px  0px 3px rgba(255, 255, 255, 0.856) ;
+    transform: scale(1.2);
+    display: block;
+    cursor: pointer;
+}
+
 .btn-default{
     background-color: var(--primary-30);
     display: flex;
