--- a/code/_stylesheets/boxes.css
+++ b/code/_stylesheets/boxes.css
@@ -7,16 +7,22 @@
 
 @media (min-width: 576px) {
     .container{
-        padding-left: 30px;
-        padding-right: 30px;
+        padding-left: 40px;
+        padding-right: 40px;
     } 
 }
 
 @media (min-width: 992px) {
     .container{
-        padding-left: 90px;
-        padding-right: 90px;
+        padding-left: 120px;
+        padding-right: 120px;
     } 
+}
+
+@media (min-width: 768px){
+    .mb-md-0{
+        margin-bottom: 0px !important;
+    }
 }
 
 .m-0{
@@ -52,11 +58,21 @@
     margin-right: 60px;
 }
 
+.mt-4{
+    margin-top: 60px;
+}
+
 .my-4{
     margin-top: 60px;
     margin-bottom: 60px;
 }
 
-.mt-4{
-    margin-top: 60px;
+.my-5{
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+.py-1{
+    padding-left: 15px;
+    padding-right: 15px;
 }
