--- a/code/_stylesheets/style.css
+++ b/code/_stylesheets/style.css
@@ -79,3 +79,11 @@ body{
     max-width: 100%;
     max-height: 520px;
 }
+
+.divisory{
+    background-color: var(--primary-100);
+    width: 100%;
+    height: 1px;
+    border-radius: 1px;
+    border: none;
+}
