--- a/code/_stylesheets/text.css
+++ b/code/_stylesheets/text.css
@@ -1,12 +1,22 @@
+@media (min-width: 992px) {
+    .h1-default{
+        font: normal var(--font-primary);
+        font-size: 48px;
+        letter-spacing: -0.24px;
+        line-height: 69px;
+    }
+}
+
+
 .text-center{
     text-align: center;
 }
 
 .h1-default{
     font: normal var(--font-primary);
-    font-size: 48px;
+    font-size: 34px;
     letter-spacing: -0.24px;
-    line-height: 69px;
+    line-height: 40px;
 }
 
 .p-display{
