codigicação da section dos desenvolvedores

--- a/code/_stylesheets/style.css
+++ b/code/_stylesheets/style.css
@@ -20,6 +20,14 @@ body{
     align-items: center;
 }
 
+.flex-wrap{
+    flex-wrap: wrap;
+}
+
+.justify-content-around{
+    justify-content: space-around;
+}
+
 .ul-nav{
     list-style: none;
     padding-inline-start: 0px;
@@ -78,6 +86,15 @@ body{
 .img-fluid{
     max-width: 100%;
     max-height: 520px;
+}
+
+.cardDev{
+    width: 200px;
+}
+
+.img-perfil{
+    width: 200px;
+    border-radius: 100px;
 }
 
 .divisory{
