--- a/code/_stylesheets/text.css
+++ b/code/_stylesheets/text.css
@@ -19,6 +19,12 @@
     line-height: 40px;
 }
 
+.subtitle{
+    font-family: var(--font-primary);
+    text-transform: uppercase;
+    font-size: 18px;
+}
+
 .p-display{
     font-family: var(--font-primary);
     font-size: 24px;
