--- a/code/_stylesheets/style.css
+++ b/code/_stylesheets/style.css
@@ -75,6 +75,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
+    font-size: 16px !important;
 }
 
 .accessibility-bar{
