--- a/code/_stylesheets/text.css
+++ b/code/_stylesheets/text.css
@@ -14,25 +14,24 @@
 
 .h1-default{
     font: normal var(--font-primary);
-    font-size: 34px;
+    font-size: 2.125rem;
     letter-spacing: -0.24px;
-    line-height: 40px;
+    line-height: 2.5rem;
 }
 
 .subtitle{
     font-family: var(--font-primary);
     text-transform: uppercase;
-    font-size: 18px;
+    font-size: 1.125rem;
 }
 
 .p-display{
     font-family: var(--font-primary);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 300;
-    letter-spacing: 0.12px;
 }
 
 .p-default{
     font-family: var(--font-primary);
-    font-size: 16px;
+    font-size: 1rem;
 }
