--- a/code/_stylesheets/style.css
+++ b/code/_stylesheets/style.css
@@ -50,6 +50,10 @@ body{
     cursor: pointer;
 }
 
+.link-active{
+    transform: scale(1.4);
+}
+
 .btn-default{
     background-color: var(--primary-30);
     display: flex;
@@ -58,6 +62,11 @@ body{
     border: none;
     padding: 10px 20px;
     border-radius: 4px;
+}
+
+.btn-default:hover{
+    background-color: var(--primary-40);
+    cursor: pointer;
 }
 
 .btn-text{
