--- a/code/_stylesheets/text.css
+++ b/code/_stylesheets/text.css
@@ -1,22 +1,23 @@
 @media (min-width: 992px) {
     .h1-default{
         font: normal var(--font-primary);
-        font-size: 48px;
+        font-size: 3rem;
         letter-spacing: -0.24px;
-        line-height: 69px;
+        line-height: 4.31rem;
     }
 }
 
+@media (max-width: 992px) {
+    .h1-default{
+        font: normal var(--font-primary);
+        font-size: 2.125rem;
+        letter-spacing: -0.24px;
+        line-height: 2.5rem;
+    }
+}
 
 .text-center{
     text-align: center;
-}
-
-.h1-default{
-    font: normal var(--font-primary);
-    font-size: 2.125rem;
-    letter-spacing: -0.24px;
-    line-height: 2.5rem;
 }
 
 .subtitle{
