--- a/code/_stylesheets/style.css
+++ b/code/_stylesheets/style.css
@@ -119,7 +119,7 @@ body{
 
 @media (min-width: 1656px) {
     .absolute-footer-lg{
-        position: absolute;
+        position: fixed;
         bottom: 0;
         width: 100%;
     }
